language/move-lang/tests/move_check/typing/extraneous_acquire.exp
error[E02002]: unnecessary or extraneous item
  ┌─ tests/move_check/typing/extraneous_acquire.move:5:23
  │
5 │     fun t0() acquires R1 {
  │                       ^^ Invalid 'acquires' list. The struct '0x8675309::M::R1' was never acquired by 'move_from', 'borrow_global', 'borrow_global_mut', or a transitive call

error[E02002]: unnecessary or extraneous item
  ┌─ tests/move_check/typing/extraneous_acquire.move:9:37
  │
9 │     fun t1(a: address) acquires R1, R2 {
  │                                     ^^ Invalid 'acquires' list. The struct '0x8675309::M::R2' was never acquired by 'move_from', 'borrow_global', 'borrow_global_mut', or a transitive call

